scrollbars dealt with and sizing bug fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,7 +29,7 @@ grid-view {
 }
 
 #icons-container {
-  width: 150px;
+  width: 200px;
   height: 50px;
   padding: 0 2px;
   background-color: blue;
