--- a/src/app/grid-view/grid-view.component.css
+++ b/src/app/grid-view/grid-view.component.css
@@ -112,3 +112,6 @@ section {
   left: 0;
   position: absolute;
 }
+.neither {
+  position: absolute;
+}
